--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -65,15 +65,22 @@
 
 	*/
 
-	@media screen and (max-width: 480px) {
+	@media screen and (max-width: 736px){
 
 		img {
+			max-width: 700px;
+		}
+		
+	}
+
+	@media screen and (max-width: 480px) {
+
+		a {
 			max-width: 480px;
 		}
 
 		html, body {
 			min-width: 320px;
-			max-width: 480px;
 		}
 
 	}
