--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -121,7 +121,7 @@
 		font-weight: 400;
 		line-height: 1.65;
 		font-size: 1em;
-		color: #aaa;
+		color: white;
 	}
 
 	a {
@@ -719,7 +719,7 @@
 		top: 0;
 		width: 22.5em;
 		height: 100%;
-		background: #fff;
+		background: #B8B8B8;
 		outline: 0;
 		overflow-x: hidden;
 		overflow-y: auto;
